# wasm-emsdk-demo

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  conanfile.py  docker-compose.yaml  main.cpp  pyproject.toml  setup.cfg
01-cpp-to-wasm/: CMakeLists.txt  build.sh  main.cpp
02-run-cpp-in-browser/native-code/: CMakeLists.txt  build.sh  main.cpp
02-run-cpp-in-browser/web-server/: index.html
03-call-cpp-from-js/native-code/: CMakeLists.txt  js_math.cpp
03-call-cpp-from-js/web-server/: index.html
04-bidirectional-communication/native-code/: CMakeLists.txt  js_val.cpp
04-bidirectional-communication/web-server/: index.html
05-dwarf-symbols/native-code/: js_dwarf.cpp
05-dwarf-symbols/web-server/: index.html
05-symbol-maps/web-server/: CMakeLists.txt  index.html
06-dwarf-symbols/native-code/: CMakeLists.txt
06-dwarf-symbols/web-server/: package-lock.json
native-code/: CMakeLists.txt
web-server/: native-code.js  native-code.wasm  package.json
